# squall

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.py  test.ci
squall/: __init__.py  __main__.py  main.py  settings.py  squall.c  squall.pyi  util.c  util.pyi  visitor.py
test/: test_arg_parsing.py  test_verify.py
test/data/: verify.py
